--- a/Wardrobe/Views/Garment/index.cshtml
+++ b/Wardrobe/Views/Garment/index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Wardrobe.Data.Garment>
 
 @{
-    ViewBag.Title = "GetGarments";
+    ViewBag.Title = "index";
 }
 
-<h2>GetGarments</h2>
+<h2>index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
